[package]
name = "qolib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.35"

[dev-dependencies]
criterion = { version="0.4.0", features=["html_reports"] }
qoi = "0.4.0"

[[bench]]
name = "comparison"
harness = false
